test_scripts/errors/float_list_fail.stderr
 1 | float([]);
     ^^^^^^^^^
Error: Cannot convert list to float
